--- a/LogcatToolWin/LogcatOutputToolWindowControl.xaml
+++ b/LogcatToolWin/LogcatOutputToolWindowControl.xaml
@@ -16,7 +16,7 @@
                         <ImageBrush ImageSource="Resources/MobileDeviceIcon.png"/>
                     </Button.Background>
                 </Button>
-                <Label x:Name="DeviceStateLabel" Content="Online" Height="31" VerticalAlignment="Top"/>
+                <Label x:Name="DeviceStateLabel" Content="Device" Height="31" VerticalAlignment="Top"/>
                 <Button x:Name="CancelLogcatButton" Content="" Height="30" VerticalAlignment="Top" Width="30" Click="CancelLogcat_OnClick" ToolTip="Cancel Logcat">
                     <Button.Background>
                         <ImageBrush ImageSource="Resources/Block.png"/>
