--- a/LogcatToolWin/SettingDialogControl.xaml
+++ b/LogcatToolWin/SettingDialogControl.xaml
@@ -6,13 +6,14 @@
              xmlns:local="clr-namespace:LogcatToolWin"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Width="300" Height="160">
-    <Grid Margin="0,-10,0,10">
+    <Grid Margin="0">
         <Label Content="Adb Path" HorizontalAlignment="Left" Margin="10,26,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="AdbPathText" HorizontalAlignment="Left" Height="23" Margin="112,26,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="178"/>
+        <TextBox x:Name="AdbPathText" HorizontalAlignment="Left" Height="23" Margin="112,26,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="140"/>
         <Label Content="Maximun Logs" HorizontalAlignment="Left" Margin="10,77,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="LogLimitText" HorizontalAlignment="Left" Height="23" Margin="112,77,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="178"/>
         <Button x:Name="OKButton" Content="OK" HorizontalAlignment="Left" Margin="37,124,0,0" VerticalAlignment="Top" Width="75" IsDefault="True" Click="OK_OnClick"/>
         <Button x:Name="CancelButton" Content="Cancel" HorizontalAlignment="Left" Margin="201,124,0,0" VerticalAlignment="Top" Width="75" IsCancel="True" Click="Cancel_OnClick"/>
+        <Button x:Name="BrowseButton" Content="..." HorizontalAlignment="Left" Margin="257,26,-32,0" VerticalAlignment="Top" Width="30" Height="25" Click="Browse_OnClick"/>
 
     </Grid>
 </UserControl>
