--- a/LogcatToolWin/LogcatOutputToolWindowControl.xaml
+++ b/LogcatToolWin/LogcatOutputToolWindowControl.xaml
@@ -13,13 +13,13 @@
             <ToolBar VerticalContentAlignment="Bottom" Margin="0" DockPanel.Dock="Top">
                 <Button x:Name="ConnectDeviceButton" Content="" Height="30" VerticalAlignment="Center" Width="30" ToolTip="Connect Device" Click="ConnectDevice_OnClick">
                     <Button.Background>
-                        <ImageBrush ImageSource="Resources/MobileDeviceIcon.png"/>
+                        <ImageBrush ImageSource="Resources/smartphone.png"/>
                     </Button.Background>
                 </Button>
                 <Label x:Name="DeviceStateLabel" Content="Device" Height="31" VerticalAlignment="Top"/>
                 <Button x:Name="CancelLogcatButton" Content="" Height="30" VerticalAlignment="Top" Width="30" Click="CancelLogcat_OnClick" ToolTip="Cancel Logcat">
                     <Button.Background>
-                        <ImageBrush ImageSource="Resources/Block.png"/>
+                        <ImageBrush ImageSource="Resources/cancel.png"/>
                     </Button.Background>
                 </Button>
                 <Label Content="Cancel Logcat"/>
@@ -29,12 +29,16 @@
                     </Button.Background>
                 </Button>
                 <Label Content="Clear Logs"/>
-                <Button x:Name="TestFilterButton" Content="Button" Height="31" VerticalAlignment="Top" Width="75" Click="TestFilter_OnClick"/>
-                <Button x:Name="SettingButton" Content="Setting" Height="31" VerticalAlignment="Top" Width="75" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Click="Setting_OnClick"/>
+                <Button x:Name="SettingButton" Content="" Height="30" VerticalAlignment="Top" Width="30" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Click="Setting_OnClick">
+                    <Button.Background>
+                        <ImageBrush ImageSource="Resources/settings.png"/>
+                    </Button.Background>
+                </Button>
+                <Label Content="Settings" Height="31" VerticalAlignment="Top"/>
             </ToolBar>
             <ListBox x:Name="FilterListBox" Width="157" VerticalContentAlignment="Stretch" Margin="4" HorizontalContentAlignment="Stretch">
                 <Button x:Name="AddFilterButton" Content="Add Filter" HorizontalContentAlignment="Center" Click="AddFilter_OnClick"/>
-                <CheckBox x:Name="FilterTemplateItem" HorizontalContentAlignment="Center" Content="FilterTemp" Click="FilterTemplate_Clicked">
+                <CheckBox x:Name="FilterTemplateItem" HorizontalContentAlignment="Center" Content="FilterTemp" Click="FilterTemplate_Clicked" Visibility="Collapsed">
                     <CheckBox.ContextMenu>
                         <ContextMenu>
                             <MenuItem Header="Delete"/>
